# ChordPumperCursor

./: .gitignore  .gitmodules  Brief.md  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: AlternateSet.hh.93F009500C4392CA.idx  AlternateSubst.hh.E46102D346770E11.idx  AlternateSubstFormat1.hh.DD707F55568631EC.idx  Anchor.hh.CE2F5C129C1013D8.idx  AnchorFormat1.hh.79E416C35A00E077.idx  AnchorFormat2.hh.D8E2513E7148227B.idx  AnchorFormat3.hh.6FB6A72A579E04A4.idx  AnchorMatrix.hh.3446EB107DDB3968.idx  BidiChain.c.CE4C37C914D53A0E.idx  BidiChain.h.25DF4B144EF24B69.idx  BidiTypeLookup.c.83FA2F765790A3F9.idx  BidiTypeLookup.h.A3CEED7EC417B2F7.idx  BracketQueue.c.90B52CF9E886B217.idx  BracketQueue.h.6E1B358E2B1C6469.idx  BracketType.h.F79EBAB3D6522453.idx  CBDT.hh.E6A77C5A7A2E9784.idx  COLR.hh.3FDDC23F71257D13.idx  CPAL.hh.86CD69F2EB683A74.idx  ChainContextPos.hh.218BEC5A0AACCC35.idx  ChainContextSubst.hh.2BB45571E397D946.idx  Chord.cpp.8A4777AA5A62FF08.idx  Chord.h.E8F9BC3F4CF7F100.idx  ChordType.h.7E09E9C857000FFD.idx  ChromaticPalette.h.B63C9CB675D55502.idx  Common.hh.893DEEACBB1B3A77.idx  Common.hh.A6E991BC6FB952B7.idx  CompositeGlyph.hh.C3EA446726D36A80.idx  ContextPos.hh.45F8B631295D09BB.idx  ContextSubst.hh.D560FDF25B30322B.idx  Coverage.hh.7E7336BEB22E2B7D.idx  CoverageFormat1.hh.ED81BAFB9B2DCDA6.idx  CoverageFormat2.hh.D49E8D7A96EA4DFD.idx  CursivePos.hh.8D8E3A0E193BBB5E.idx  CursivePosFormat1.hh.4CE38002E0C7723C.idx  ExtensionPos.hh.42A42B1F1B1CB032.idx  ExtensionSubst.hh.FA060BBD8CC9B466.idx  GDEF.hh.02374410B5ADD8F3.idx  GPOS.hh.93318FD0EDB5DC55.idx  GSUB.hh.65E99ACC4979F727.idx  GeneralCategoryLookup.c.B88F33EF1F231CF5.idx  (+1787 more)
.cursor/commands/gsd/: add-phase.md  add-todo.md  audit-milestone.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  execute-phase.md  health.md  help.md  insert-phase.md  join-discord.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  research-phase.md  resume-work.md  set-profile.md  settings.md  update.md  verify-work.md
.cursor/plans/: bitwig_parameter_randomizer_5de39513.plan.md  bitwig_parameter_randomizer_f5d8e028.plan.md
.cursor/projects/home-stoo-code-ai-Plugins/agent-tools/: 81e505b5-d57e-4d91-9421-d5bacdc7aa37.txt  fe54f7cc-4c39-4f13-8290-d30b129ab206.txt
.cursor/rules/: deploy-plugins.mdc
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-plugin-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md  validation-results.md
.planning/phases/02-chord-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-playable-grid/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-morphing-suggestions/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-capture-export/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-state-persistence-validation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-ux-polish-progression-workflow/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-grid-ux-overhaul/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-chord-depth-ui-polish/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-strip-interaction-and-octave-control/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/quick/1-resize-plugin-window-to-1000x600-and-fit/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-progression-strip-hold-to-play-and-drag-/: 002-PLAN.md  002-SUMMARY.md
.planning/quick/3-strip-slot-overwrite-drag-and-stronger-d/: 003-PLAN.md  003-SUMMARY.md
.planning/quick/4-fix-right-click-drag-quadrant-selection-/: 4-PLAN.md  4-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
build-release/: .ninja_deps  .ninja_log  ChordPumper_vst3_helper  build.ninja
build-release/ChordPumper_artefacts/JuceLibraryCode/: Info.txt
build-release/ChordPumper_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/libs/JUCE/: JUCEExportConfig.cmake
build-release/libs/JUCE/tools/: .ninja_deps  .ninja_log  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja
build-release/libs/clap-juce-extensions/clapjuceext_clap/: clap.pc
cmake/: glibc_compat_math.c
cmake/glibc-compat/bits/: libc-header-start.h
src/: PersistentState.cpp  PersistentState.h  PluginProcessor.cpp  PluginProcessor.h
src/engine/: Chord.cpp  Chord.h  ChordType.h  MorphEngine.cpp  MorphEngine.h  NoteLetter.h  PitchClass.cpp  PitchClass.h  PitchClassSet.h  RomanNumeral.cpp  RomanNumeral.h  ScaleDatabase.h  VoiceLeader.cpp  VoiceLeader.h
src/midi/: ChromaticPalette.h  MidiFileBuilder.cpp  MidiFileBuilder.h
src/ui/: ChordPumperLookAndFeel.h  GridPanel.cpp  GridPanel.h  PadComponent.cpp  PadComponent.h  PluginEditor.cpp  PluginEditor.h  ProgressionStrip.cpp  ProgressionStrip.h
tests/: test_chord.cpp  test_chord_naming.cpp  test_midi_file_builder.cpp  test_morph_engine.cpp  test_pitch_class.cpp  test_pitch_class_set.cpp  test_roman_numeral.cpp  test_state.cpp  test_voice_leader.cpp
(+5 files in other folders)
